--- a/success.html
+++ b/success.html
@@ -12,7 +12,7 @@
 <body>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Awesome Pawsome!</h1>
+      <h1 class="display-4">Brilliant!</h1>
       <p class="lead">You've been succesfully signed up to the newsletter, look forward to lots of awesome content!</p>
     </div>
   </div>
